--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "generate-types": "tsx scripts/generate-types.ts",
+    "generate-schemas": "tsx scripts/generate-zod-schemas.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -51,5 +52,9 @@
   ],
   "engines": {
     "node": ">=14.0.0"
+  },
+  "dependencies": {
+    "ts-to-zod": "^3.15.0",
+    "zod": "^4.0.2"
   }
 }
