Enhance SDK documentation and add mock data generation examples
- Updated CLAUDE.md to include a new section for SDK usage examples.
- Added a new directory with examples demonstrating basic object creation and mock data generation using the @anatine/zod-mock library.
- Enhanced eslint configuration to include test files in linting.
- Updated package.json and package-lock.json to include new dependencies for mock data generation.
- Improved development progress documentation to reflect ongoing testing and validation efforts.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,36 @@
 {
-  "name": "@tidas/sdk",
+  "name": "@tidas-typescript-sdk",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "module": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./core": {
+      "types": "./dist/core/index.d.ts",
+      "import": "./dist/core/index.js",
+      "require": "./dist/core/index.js"
+    },
+    "./types": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/types/index.js",
+      "require": "./dist/types/index.js"
+    },
+    "./schemas": {
+      "types": "./dist/schemas/index.d.ts",
+      "import": "./dist/schemas/index.js",
+      "require": "./dist/schemas/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils/index.d.ts",
+      "import": "./dist/utils/index.js",
+      "require": "./dist/utils/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -54,7 +82,9 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "@anatine/zod-mock": "^3.14.0",
+    "@faker-js/faker": "^9.9.0",
     "ts-to-zod": "^3.15.0",
-    "zod": "^4.0.2"
+    "zod": "^3.25.76"
   }
 }
