--- a/examples/package.json
+++ b/examples/package.json
@@ -13,11 +13,11 @@
     "run-validation-modes": "tsx 03-validation-modes/validation-config-demo.ts"
   },
   "dependencies": {
-    "@tiangong-lca/tidas-sdk": "^0.1.3"
+    "@tiangong-lca/tidas-sdk": "^0.1.5"
   },
   "devDependencies": {
+    "@types/node": "^24.0.14",
     "tsx": "^4.7.0",
-    "typescript": "^5.8.3",
-    "@types/node": "^24.0.14"
+    "typescript": "^5.8.3"
   }
 }
