fix: update build script and methodology path handling
- Modify the build script in package.json to copy methodologies to the dist directory after TypeScript compilation.
- Update methodology directory path handling in base.ts to check for existence and fallback to the dist path if necessary.
- Clean up whitespace in index.ts for improved readability.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r tidas-tools/src/tidas_tools/tidas/methodologies dist/methodologies",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
