feat: bundle methodologies into a single JSON file for improved accessibility
- Introduced a new script (bundle-methodologies.ts) to consolidate methodology files into a single JSON output, enhancing browser compatibility.
- Updated package.json scripts to include a new build step for bundling methodologies.
- Updated methodology handling in core files to utilize bundled data instead of individual YAML files, streamlining data access and improving performance.
- Added TypeScript declarations for the bundled methodologies to ensure type safety and better integration with TypeScript projects.

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     }
   },
   "scripts": {
-    "build": "tsc && cp -r tidas-tools/src/tidas_tools/tidas/methodologies dist/methodologies",
+    "build": "tsx scripts/bundle-methodologies.ts && tsc",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
+    "bundle-methodologies": "tsx scripts/bundle-methodologies.ts",
     "generate-types": "tsx scripts/generate-types.ts",
     "generate-schemas": "tsx scripts/generate-zod-schemas.ts",
     "lint": "eslint .",
