--- a/sdks/typescript/examples/package.json
+++ b/sdks/typescript/examples/package.json
@@ -14,7 +14,7 @@
     "run-ai-suggestion": "tsx 04-integration/ai-suggestion.ts"
   },
   "dependencies": {
-    "@tiangong-lca/tidas-sdk": "workspace:*"
+    "@tiangong-lca/tidas-sdk": "*"
   },
   "devDependencies": {
     "@types/node": "^24.0.14",
