--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -70,6 +70,7 @@
     "jest": "^30.0.4",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
+    "tsx": "^4.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
