build: enable PEP 561 type checking support
Add py.typed marker file and configure package-data in pyproject.toml
to enable external type checkers to use the SDK's type information.

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -35,6 +35,9 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+tidas_sdk = ["py.typed"]
+
 [tool.ruff]
 line-length = 100
 target-version = "py38"
