feat: enhance SDK generation with new script and updated dependencies
This commit introduces a new script, `generate_types.py`, which utilizes the `datamodel-code-generator` library to automate the generation of Pydantic models from TIDAS JSON schemas. Key changes include:

- Added `datamodel-code-generator` as a dependency for improved model generation.
- Removed outdated documentation links from the README.
- Created comprehensive documentation for the new script, detailing its functionality and usage.

These updates aim to streamline the SDK generation process and improve code maintainability.

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -21,11 +21,11 @@ dev = [
     "ruff>=0.1.0",
     "black>=23.0",
     "pydocstyle>=6.0",
+    "datamodel-code-generator>=0.25.0",  # For generating Pydantic models from JSON schemas
 ]
 
 [project.urls]
 Homepage = "https://github.com/tiangong-lca/tidas-sdk"
-Documentation = "https://tidas-sdk.readthedocs.io"
 Repository = "https://github.com/tiangong-lca/tidas-sdk"
 
 [build-system]
