chore: add release scripts for versioning and publishing
- Added new npm scripts for patch, minor, and major releases in the TypeScript SDK.
- Updated existing test script in the root package.json for consistency.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "bootstrap": "npm install --workspaces",
     "build:typescript": "npm --workspace @tiangong-lca/tidas-sdk run build",
-    "test:typescript": "npm --workspace @tiangong-lca/tidas-sdk run test"
+    "test:typescript": "npm --workspace @tiangong-lca/tidas-sdk run test",
+    "release:patch:typescript": "npm --workspace @tiangong-lca/tidas-sdk run release:patch"
   }
 }
