refactor: update Python SDK documentation and improve code formatting
- Cleaned up docstrings across various wrapper classes for consistency and clarity.
- Adjusted formatting in `pyproject.toml` for better readability.
- Added new dependency groups for development tools in `pyproject.toml`.
- Enhanced comments in the `generate_wrappers.py` script to improve understanding of property methods.
- Updated process categories in `tidas_processes_category.py` for accuracy and clarity.
- Regenerated type files to ensure alignment with updated schemas and remove duplicates.

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -2,8 +2,8 @@
 name = "tidas-sdk"
 version = "0.1.0"
 description = "Python SDK for TIDAS/ILCD Life Cycle Assessment data"
-authors = [{name = "TIDAS Team"}]
-license = {text = "MIT"}
+authors = [{ name = "TIDAS Team" }]
+license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
@@ -21,7 +21,7 @@ dev = [
     "ruff>=0.1.0",
     "black>=23.0",
     "pydocstyle>=6.0",
-    "datamodel-code-generator>=0.25.0",  # For generating Pydantic models from JSON schemas
+    "datamodel-code-generator>=0.25.0", # For generating Pydantic models from JSON schemas
 ]
 
 [project.urls]
@@ -44,7 +44,7 @@ target-version = "py38"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
-ignore = []
+ignore = ["N815", "E501","F811","F401","I001","F822","F841","F541","N818"]
 
 [tool.mypy]
 python_version = "3.12"
@@ -78,4 +78,11 @@ exclude_lines = [
     "raise NotImplementedError",
     "if TYPE_CHECKING:",
     "@abstractmethod",
+]
+
+[dependency-groups]
+dev = [
+    "datamodel-code-generator>=0.27.3",
+    "mypy>=1.14.1",
+    "ruff>=0.14.3",
 ]
