refactor: enhance type definitions and update linting rules
- Added new type classes (ST, FT, CASNumber, Int5, Int6, Perc, Real, MatR, MatV, UUID) to improve data validation and structure.
- Updated existing type definitions for consistency and clarity.
- Modified `pyproject.toml` to include an additional linting rule (N816) for better code quality enforcement.

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -44,7 +44,7 @@ target-version = "py38"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
-ignore = ["N815", "E501","F811","F401","I001","F822","F841","F541","N818"]
+ignore = ["N815","N816", "E501","F811","F401","I001","F822","F841","F541","N818"]
 
 [tool.mypy]
 python_version = "3.12"
