--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python SDK for TIDAS/ILCD Life Cycle Assessment data"
 authors = [{ name = "TIDAS Team" }]
 license = { text = "MIT" }
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 dependencies = [
     "pydantic>=2.0,<3.0",
     "loguru>=0.7.0",
@@ -15,13 +15,13 @@ keywords = ["tidas", "ilcd", "lca", "life-cycle-assessment"]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0",
-    "pytest-cov>=4.0",
-    "mypy>=1.0",
-    "ruff>=0.1.0",
-    "black>=23.0",
-    "pydocstyle>=6.0",
-    "datamodel-code-generator>=0.25.0", # For generating Pydantic models from JSON schemas
+    "pytest>=8.0",
+    "pytest-cov>=5.0",
+    "mypy>=1.10",
+    "ruff>=0.6.0",
+    "black>=24.0",
+    "pydocstyle>=6.3",
+    "datamodel-code-generator>=0.27.0", # For generating Pydantic models from JSON schemas
 ]
 
 [project.urls]
@@ -29,7 +29,7 @@ Homepage = "https://github.com/tiangong-lca/tidas-sdk"
 Repository = "https://github.com/tiangong-lca/tidas-sdk"
 
 [build-system]
-requires = ["setuptools>=65", "wheel"]
+requires = ["setuptools>=70", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
@@ -40,7 +40,7 @@ tidas_sdk = ["py.typed"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py38"
+target-version = "py312"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
@@ -82,7 +82,9 @@ exclude_lines = [
 
 [dependency-groups]
 dev = [
+    "build>=1.2.2.post1",
     "datamodel-code-generator>=0.27.3",
     "mypy>=1.14.1",
     "ruff>=0.14.3",
+    "twine>=6.1.0",
 ]
