chore: update package.json files and adjust bundled methodologies timestamp
- Modified `package.json` in the TypeScript SDK to use relative paths for `main`, `types`, and `module`.
- Updated the dependency version for `@tiangong-lca/tidas-sdk` in the examples package to `^0.1.20`.
- Changed the `bundled_at` timestamp in `bundled-methodologies.json` to reflect the latest bundling date.

--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@tiangong-lca/tidas-sdk",
   "version": "0.1.20",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
