--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -21,7 +21,7 @@ dev = [
     "ruff>=0.6.0",
     "black>=24.0",
     "pydocstyle>=6.3",
-    "datamodel-code-generator>=0.27.0", # For generating Pydantic models from JSON schemas
+    "datamodel-code-generator>=0.27.0", 
 ]
 
 [project.urls]
