--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.0,<3.0",
     "loguru>=0.7.0",
     "typing-extensions>=4.0.0; python_version<'3.10'",
+    "jsonschema>=4.19.0",
 ]
 keywords = ["tidas", "ilcd", "lca", "life-cycle-assessment"]
 
@@ -36,7 +37,7 @@ build-backend = "setuptools.build_meta"
 where = ["src"]
 
 [tool.setuptools.package-data]
-tidas_sdk = ["py.typed"]
+tidas_sdk = ["py.typed", "schemas/*.json"]
 
 [tool.ruff]
 line-length = 100
