--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "tidas-sdk"
-version = "0.1.0"
+version = "0.1.1"
 description = "Python SDK for TIDAS/ILCD Life Cycle Assessment data"
-authors = [{ name = "TIDAS Team" }]
+authors = [{ name = "Tiangong LCA Team" }]
 license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.12"
